dev/ingress/fake37-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake37-ingress
  namespace: fake37-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake37.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake37-service
                port:
                  number: 20037
